// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AlgoliaInsights's productListFilteredEvents destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product List Filtered",
      "eventType": "click",
      "filters": Array [
        "E625IsTOULbrg8:E625IsTOULbrg8",
      ],
      "index": "E625IsTOULbrg8",
      "queryID": "E625IsTOULbrg8",
      "testType": "E625IsTOULbrg8",
      "timestamp": null,
      "userToken": "E625IsTOULbrg8",
    },
  ],
}
`;

exports[`Testing snapshot for AlgoliaInsights's productListFilteredEvents destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "Product List Filtered",
      "eventType": "click",
      "filters": Array [
        "E625IsTOULbrg8:E625IsTOULbrg8",
      ],
      "index": "E625IsTOULbrg8",
      "userToken": "E625IsTOULbrg8",
    },
  ],
}
`;
